<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Hardware" Id="{65ca2073-d302-449b-89a7-bb6faedd692d}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	numConveyors : INT := 20;
END_VAR
VAR_GLOBAL
	allConveyors : ARRAY[0..numConveyors] OF Conveyor;

	robots : ARRAY[1..6] OF Robot;
	
	(*
	names for moving parts should be in the following format: <type> <location> <surface>
	*)
	
	//A23 - PAPER
	wrapperA23 : WrapMachine;
	//-------------
	
	//A22 - CARDBOARD + CORNER GUARD
	cardboardBenderLeft, cardboardBenderRight : FoldingMachine;
	
	cardboardSkidLeft, cardboardSkidRight : MaterialStorage;
	cornerGuardMagazineLeft, cornerGuardMagazineRight : MaterialStorage;
	insertionA22Left, insertionA22Right : ClampInsertion;
	insertionA22Bottom : TeknicEIP;
	
	wrapperA22 : WrapMachine;
	overhead : STRING;
	
	suctionA22TopLeft, suctionA22TopRight : SuctionPad;
	suctionA22BottomLeft, suctionA22BottomRight : SuctionPad;
	//-------------
	
	
	//A21 - CHIPBOARD + WOOD BUNK
	toolStorageA21Left, toolStorageA21Right : A21ToolStorage;
	
	chipboardSkidLeft, chipboardSkidRight : MaterialStorage;
	woodBunkMagazineLeft, woodBunkMagazineRight : MaterialStorage;
	
	stagingTableLeft, stagingTableRight : WoodBunkTable;
	strapperA21 : StrapMachine;
	
	insertionA21Left, insertionA21Right : PneumaticInsertion;	
	insertionA21Bottom : TeknicEIP;
	
	suctionA21Top : ARRAY[1..3] OF SuctionPad;
	suctionA21Left, suctionA21Right : ARRAY[1..4] OF SuctionPad;
	suctionA21Bottom : ARRAY[1..2] OF SuctionPad;
	//-------------
	
	//A25 - OUTPUT
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>